# isout

./: .gitignore  .gitmodules  Makefile.am  Readme.md  autogen.sh  configure.ac
.github/workflows/: ccpp.yml
config/: config.json  isout.pac
docs/: Design.md  代理模式设置方法.md
lib/: Makefile.am
m4/: isout_config_files.m4
src/: Makefile.am  isout.c  isout.h  isshe_proxy_server.c  isshe_proxy_server.h  isshe_socks_parser.h  isshe_socks_protocol.c
src/base/: iconfig.c  iconfig.h  iconnection.c  iconnection.h  ievent.c  ievent.h  ilog.c  ilog.h  iprotocol.c  iprotocol.h  irole.h  isession.h  iuser.h
src/base/iapp/: iapp.h
src/base/isession/: isession.h
src/old/: isshe_socks_common.c  isshe_socks_common.h  isshe_socks_parser.c  isshe_socks_protocol.c  isshe_socks_protocol.h
src/protocol/isout/: isout_connection.c  isout_connection.h  isout_decode.c  isout_decode.h  isout_encode.c  isout_encode.h  isout_options.c  isout_options.h  isout_protocol.c  isout_protocol.h
src/protocol/socks/: socks4.c  socks4.h  socks5.c  socks5.h
src/roles/: Readme.md
src/roles/idns/: Readme.md
src/roles/imaster/: imaster.c  imaster.h  imaster_process.c  imaster_process.h  imaster_signal.c  imaster_signal.h
src/roles/ipac/: Readme.md
src/roles/iproxy/: iproxy.c  iproxy.h  iproxy_config.c  iproxy_config.h  iproxy_event.c  iproxy_event.h  iproxy_session.c  iproxy_session.h  iproxy_signal.c  iproxy_signal.h
src/roles/isocks/: Readme.md  isocks.c  isocks.h  isocks_config.c  isocks_config.h  isocks_event.c  isocks_event.h  isocks_mode.c  isocks_mode.h  isocks_session.c  isocks_session.h  isocks_socks.c  isocks_socks.h  isocks_socks5.c  isocks_socks5.h
src/roles/iwaf/: Readme.md
test/: Makefile.am
test/protocol/: Makefile.am
test/protocol/isout/: Makefile.am  test_isout_encode_decode.c
